k8s/applications/web/trilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
  labels:
    name: trilium
