k8s/applications/web/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
  labels:
    app.kubernetes.io/name: trilium
    app.kubernetes.io/part-of: trilium
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: trilium
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
